--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -2,4 +2,4 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.MySQLDialect
 jdbc.databaseurl=jdbc:mysql://localhost:3306/solution
 jdbc.username=root
-jdbc.password=v94eslav
+jdbc.password=root
